# ti-chatbot-workshop

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
data_load/: Dockerfile  config.py  extract_data.py  ingest_multimodal_data.py  main.py  requirements.txt
notebooks/: db.ipynb  ingest_summaries.ipynb
part_1/: Dockerfile  _config.py  _get_text.py  chatbot.py  frontend.py  requirements.txt
part_1/txt_data/: poland_info.txt  readme.txt
part_2/: Dockerfile  _config.py  _utils.py  frontend.py  requirements.txt
postgres/: Dockerfile  dump-postgres-202411251007.sql  init-db.sh
src/chatbot/: pyproject.toml
src/chatbot/chatbot/: chatbot.py
src/common/: pyproject.toml
src/common/common/: config.py  utils.py
src/frontend/: pyproject.toml
src/frontend/frontend/: main.py  multimodal_chatbot.py  utils.py
