[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = "Module holding chatbot logic."
authors = ["Jakub Kornecki <jakor@dfds.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
common = { path = "../common/", develop = true }


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
