[tool.poetry]
name = "frontend"
version = "0.1.0"
description = "Module responsible for the visual representation of the chatbot"
authors = ["Jakub Kornecki <jakor@dfds.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
common = { path = "../common/", develop = true }
chatbot = { path = "../chatbot/", develop = true }


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
